--- a/predictingHousePrices.ipynb
+++ b/predictingHousePrices.ipynb
@@ -7,8 +7,7 @@
    "source": [
     "### 0. Goals of this project\n",
     "##### - Build a model using Linear Regression (LR) to predict house prices given its characteristics.\n",
-    "##### - Learn to use different metrics to determine the accuracy of the model.\n",
-    "##### - Develop an interactive dashboard to highlight relevant information."
+    "##### - Learn to use different metrics to determine the accuracy of the model."
    ]
   },
   {
@@ -934,6 +933,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "76b78766",
+   "metadata": {},
+   "source": [
+    "#### 3.1 Overview"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 279,
    "id": "747c6a5e",
@@ -975,16 +982,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": null,
    "id": "9c517c1a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "#Dropping extreme values\n",
-    "\n",
     "df = df[df['price']< 1000000]\n",
-    "df = df[df['area']< 12000]\n"
+    "df = df[df['area']< 12000]"
    ]
   },
   {
@@ -1446,7 +1451,7 @@
    "id": "3af2bde3",
    "metadata": {},
    "source": [
-    "##### Thoughts from graphs\n",
+    "##### 3.2 Thoughts About the Graphs\n",
     "\n",
     "The dataset has a higher concentration of data points for houses around the $2 000 000 - $6 000 000 price range. This could negatively affect our model; It would have a harder predicting \n",
     "higher costing houses, due to it having less data to rely on. This in turn adds more weight to outliers.\n",
@@ -3577,7 +3582,7 @@
    "id": "d6d4103d",
    "metadata": {},
    "source": [
-    "#### 7.3 Thoughts About Comparison\n",
+    "### 8. Final Thoughts\n",
     "\n",
     "With the enhanced data preprocessing techniques (stratification, log-transformation of the target variable) and the use of cross-validation, there is a 8.57% decrease in MAE and 12.43% decrease in RMSE. There was also a 2% improvement for the model fit."
    ]
